<resources>
    <string name="app_name">Calculator</string>
    <string name="title">Grade Calculator</string>
    <string name="name">Student name:</string>
    <string name="marks1">Marks 1:</string>
    <string name="marks2">Marks 2:</string>
    <string name="marks3">Marks 3:</string>
    <string name="total">Total:</string>
    <string name="avg">Average:</string>
    <string name="grade">Grade:</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>

</resources>
